2002-07-09  Tom Tromey  <tromey@redhat.com>

	* lib/am/depend2.am: Reworked syntax to avoid parsing problem.

	* lib/am/depend2.am: Search in srcdir and builddir for %SOURCE%
	before passing to cygpath.  Partial fix for PR automake/334.

2002-07-09  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (generate_makefile): Suggest using AM_CPPFLAGS
	instead of INCLUDES.
	* tests/pluseq5.test: Check that AM_CPPFLAGS is suggested.

2002-07-09  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (usage, version): Honor $exit_code.
	(parse_arguments): Use fatal.

2002-07-09  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.texi (Invoking Automake): Document WARNINGS.
	* automake.in (switch_warning, parse_WARNINGS): New function.
	(setup_warnings): Rename to ...
	(parse_warnings): ... this.  Move most of the code to switch_warning.
	Accept a comma separated list of categories.
	* tests/vars2.test: Use a comma separated list of warning categories.

2002-07-08  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* NEWS (New in 1.6): Mention that libtoolize is no longer run
	by automake.

2002-07-08  Alexandre Duret-Lutz  <duret_g@epita.fr>

	Fix for PR automake/291:
	* automake.in (macro_define): Catch variable names starting
	with `_'.
	(handle_installdirs): Rename _am_installdirs to	am__installdirs.
	* lib/am/data.am, lib/am/install.am, lib/am/libs.am,
	lib/am/lisp.am, lib/am/ltlibs.am, lib/am/mans.am,
	lib/am/progs.am, lib/am/python.am, lib/am/scripts.am,
	lib/am/texinfos.am: Likewise.
	* tests/canon5.test: Use -Wno-portability.
	* tests/vars2.test: New file.
	* tests/Makefile.am (TESTS): Add vars2.test.

2002-07-08  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/defs (AUTOMAKE): Add -Wall.
	* tests/outdir.test: Use -Wno-obsolete.

2002-07-07  Tom Tromey  <tromey@redhat.com>

	* m4/depend.m4 (_AM_DEPENDENCIES): Compute am__fastdep<compiler>
	conditional.
	* automake.in (handle_languages): Compute FASTDEP.
	* lib/am/depend2.am: Added %FASTDEP% mode.
