@@ -4323,6 +4323,12 @@ want to set @samp{TAGS_DEPENDENCIES}.  The contents of this variable
 are added directly to the dependencies for the @code{tags} target.
 @vindex TAGS_DEPENDENCIES
 
+Automake also generates a @code{ctags} target which can be used to
+build @command{vi}-style @file{tags} files.  The variable @code{CTAGS}
+is the name of the program to invoke (by default @samp{ctags});
+@code{CTAGSFLAGS} can be used by the user to pass additional flags,
+and @code{AM_CTAGSFLAGS} can be used by the @file{Makefile.am}.
+
 Automake will also generate an @code{ID} target which will run
 @code{mkid} on the source.  This is only supported on a
 directory-by-directory basis.
