@@ -1,5 +1,13 @@
 2002-07-09  Tom Tromey  <tromey@redhat.com>
 
+	For PR automake/286:
+	* automake.texi (Tags): Document ctags.
+	* automake.in (handle_tags): Handle ctags.
+	* lib/am/tags.am (CTAGS): New macro.
+	(CTAGSFLAGS): Likewise.
+	(ctags): New target.
+	(distclean-tags): Remove `tags'.
+
 	* lib/am/depend2.am: Reworked syntax to avoid parsing problem.
 
 	* lib/am/depend2.am: Search in srcdir and builddir for %SOURCE%
